--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ li {
 	color: white;
 	border-bottom: 1px solid  #686868;
 	padding-bottom: 5px;
-	width: 78%;
+	width: 230px;
 	margin: 0 auto;
 	z-index: 3;
 	position: relative;
@@ -134,6 +134,39 @@ button {
 	width: 190px;
 	display: block;
 	white-space: normal;
+	cursor: pointer;
+	position: relative;
+}
+.pseudoelement {
+	width: 190px;
+	display: block;
+	white-space: normal;
+	cursor: pointer;
+	position: relative;
+	color: grey;
+}
+.nameTask:after {
+	content: '';
+ 	width: 234px;
+ 	height: 1px;
+ 	background: white;
+ 	display: none;
+	top: 11px;
+ 	left: -5px;
+ 	position: absolute;
+ 	padding: 0;
+ 	
+}
+ .pseudoelement:after {
+	content: '';
+ 	width: 100%;
+ 	height: 1px;
+ 	background: #b3b3b3;
+	top: 11px;
+ 	left: -5px;
+ 	display: block;
+ 	position: absolute;
+ 	padding: 0;
 }
 .arrow-down {
 	width: 17px;
@@ -197,6 +230,8 @@ button {
 	font-weight: 300;
 	margin-right: 10px;
 }
+
+
 
 
  
