--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
 }
 ul {
 	padding: 0;
+	padding-bottom: 30px;
 	width: 100%;
 	list-style: none;
 	margin: 0 auto;
@@ -90,19 +91,19 @@ li {
 #addTask {
 	position: relative;
 	text-align: center;
-	z-index: 1000;
+	
 }
 
 .black-bg {
-	position: absolute;
-	background: #161010;
-	opacity: 0.5;
+	background: rgba(22, 16, 16, 0.5);
 	width: 300px;
-	height: 300px;
-	z-index: 1;
+	min-height: 400px;
 	margin: 0 auto;
 	box-shadow: 5px 0 15px rgba(0,0,0,0.5);
 
+}
+.opacity-block {
+	opacity: 1;
 }
 button {
 	padding: 0;
@@ -121,6 +122,7 @@ button {
 .edit {
 	background: url('img/glyphicons.png') no-repeat;
 	background-size: 90%;
+	background-position: 0 -58px;
 	left: 190px;
 }
 .delete {
@@ -230,6 +232,7 @@ button {
 	font-weight: 300;
 	margin-right: 10px;
 }
+
 
 
 
